--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@zzarzzur/modeltype-engine",
+  "name": "modeltype",
   "version": "1.0.5",
-  "description": "ModelType Engine",
+  "description": "Define great data models",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Omar Zouai <omar@omarzouai.com>",
+  "license": "AGPL-3.0+",
   "dependencies": {
     "yamljs": "^0.2.10"
   }
